<resources>
    <string name="app_name">安徽省图书馆</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_store_title">馆内介绍</string>
    <string name="tab_rank_title">书本查询</string>
    <string name="activity_reserve_records">我的查找记录</string>
    <string name="activity_reserve_title">我的查找</string>
    <string name="detail_1">狩猎纹铜壶，战国
成都青羊小区出土

腹径26厘米，高41.4厘米

壶口微侈，颈部瘦长，椭圆形腹，矮圈足。肩部两侧有对称的铺首衔环一对。从壶颈口部至圈足，全身分为七段，均有不同的图案和纹饰组成。主题图案有羽人仙鹤图、狩猎图、三足鸟向日图等，在三组图案之间，分别由几何菱形纹、蟠螭纹、云雷纹等纹饰间隔。</string>
    <string name="scstm_intro">安徽省图书馆前身是安徽省立图书馆，1913年2月创建于安徽安庆。1953年4月调整更名为安徽省图书馆，馆址位于合肥逍遥津公园西侧，1962年12月迁至包河公园西南侧。1998年10月在原址上进行大规模扩建，总建筑面积达3.61万平方米，2003年11月全面对外开放。安徽省古籍保护中心、中国数字图书馆安徽分馆、中国盲文图书馆安徽分馆均设立在本馆。作为公共文化机构法人治理结构改革试点单位，安徽省图书馆于2019年正式成立第一届理事会。

截至2023年末，全馆共设有内设机构16个。工作人员181人，其中大专以上学历占97.2%，高级专业技术职务岗位聘任46人。馆藏普通文献418万余册（件），包括普通古籍40,306部319,019册，善本古籍3,247部33,134册；电子图书165万余册；数字资源总量812TB。作为国务院批准的首批全国古籍重点保护单位，安徽省图书馆现有132部古籍入选前六批《国家珍贵古籍名录》，85部古籍入选《安徽省珍贵古籍名录》。馆藏中还建有章伯钧等安徽名人专藏。

安徽省图书馆始终坚持“服务第一，读者至上”的服务宗旨，全年免费对外开放。全馆设有19个对外服务窗口、1500余个阅览座位，实行文献借阅一体化，并在全省范围内建立了22家分馆和55家图书服务点。现有持证读者30.2万多人，已连续多年读者接待人次、书刊外借册次突破百万，取得了优质的服务绩效。在坚持做好基本服务的同时，以免费开放为契机，以“创先争优”为动力，以ISO质量管理为标杆，不断创新服务方式，拓展服务内容，着力打造了“新安百姓讲堂”“残障人士读书文化日”“读者英语沙龙”等多个服务品牌，体现了公共图书馆为民服务“公益性、基本性、均等性、便利性”的要求。

在安徽省文化和旅游厅的指导重视与社会各界的大力支持下，安徽省图书馆各项业务建设快速发展，综合服务能力整体提升。近年来获评“全国文化和旅游系统先进集体”、中共中央文明办“最佳志愿服务项目”、“中华古籍普查文化志愿服务行动”组织实施先进单位、“全国青年文明号”“全国巾帼文明岗”“全国古籍保护先进集体”“全国家庭亲子阅读体验基地”“全民阅读示范基地”“全国图书馆文献缩微工作先进集体”等荣誉，以及安徽省“文明单位”“普法工作先进单位”“理论宣讲示范基地”“爱国主义教育示范基地”“亲子阅读体验基地”“科学技术普及基地”“国际交流合作基地”和“合肥市卫生先进单位”“合肥市双拥合格单位”等省市级荣誉。</string>
    <string name="scstm_time">馆内拥有大量的图书资源</string>
    <string name="home_volunteer">安徽省图书馆</string>
</resources>