<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/actionbar_color"
        android:gravity="center"
        android:text="首页"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:banner_default_image="@mipmap/ic_launcher"
                app:banner_layout="@layout/banner"
                app:indicator_drawable_selected="@drawable/home_banner_indicator_blue"
                app:indicator_drawable_unselected="@drawable/home_banner_indicator_dark"
                app:indicator_margin="4dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="安徽省博物馆简介"
                    android:singleLine="true"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_intro"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPic"
                    android:src="@drawable/anhui_library_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView

                        android:id="@+id/tvText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:text="安徽省博物馆简介"
                        android:textColor="#000000" />
                    <!--            android:layout_gravity="center"-->
                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@id/tvText"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="15dp"
                        android:maxLines="2"
                        android:overScrollMode="ifContentScrolls"
                        android:text="@string/scstm_intro"
                        android:textColor="#000000" />

                    <View
                        android:background="#E1E1E1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="书籍推荐"
                    android:singleLine="true"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_open_time"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/anhui_library_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView

                        android:layout_marginLeft="10dp"
                        android:id="@+id/tv_time"
                        android:layout_gravity="center"
                        android:text="书籍推荐"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/tv_detail"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:text="@string/scstm_time"
                        android:layout_marginBottom="15dp"
                        android:maxLines="2"
                        android:overScrollMode="ifContentScrolls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />

                    <View
                        android:background="#E1E1E1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/home_volunteer"
                    android:singleLine="true"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_volu"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:src="@drawable/anhui_library_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView

                        android:layout_marginLeft="10dp"
                        android:id="@+id/tv_time1"
                        android:layout_gravity="center"
                        android:text="@string/home_volunteer"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/tv_detail1"
                        android:layout_alignParentBottom="true"
                        android:layout_gravity="center"
                        android:text="@string/home_volunteer"
                        android:layout_marginBottom="15dp"
                        android:maxLines="2"
                        android:overScrollMode="ifContentScrolls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000000" />

                    <View
                        android:background="#E1E1E1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>